@@ -29,6 +29,7 @@ GenericExecuteSynth \
 && printf %s \'$DATA\' | fmt >>$TMPDIR/dtk-speak.txt && say -fi $TMPDIR/dtk-speak.txt"
 
 GenericCmdDependency "say"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
 # all the characters that should be replaced by whitespaces in
