@@ -23,6 +23,7 @@ GenericExecuteSynth \
 \'$DATA\' | sed -e /unknown*/d >$TMPDIR/epos-said.wav && play $TMPDIR/epos-said.wav >/dev/null"
 
 GenericCmdDependency "epos-say"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # GenericStripPunctChars is a list (enclosed in doublequotes) of
 # all the characters that should be replaced by whitespaces in
