@@ -23,6 +23,7 @@ GenericExecuteSynth \
 "printf %s \'$DATA\' | espeak -w $TMPDIR/espeak.wav -v $VOICE -s $RATE -a $VOLUME -p $PITCH $PUNCT --stdin && $PLAY_COMMAND $TMPDIR/espeak.wav"
 
 GenericCmdDependency "espeak"
+GenericSoundIconFolder "/usr/share/sounds/sound-icons/"
 
 # The following three items control punctuation levels None, Some, and All.
 # Each of these values will be substituted into the $PUNCT variable depending
